# password_manager_c

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  common.h  main.c  test.txt
.githooks/: pre-commit
include/: common.h  copy_to_clipboard.h  db.h  encryption.h  fs.h  interface.h  json.h  json_export.h  json_import.h  os.h  password_generator.h  paths.h  search.h  terminal.h  validations.h
interface/: interface.c
src/: common.c  copy_to_clipboard.c  db.c  encryption.c  fs.c  interface.c  json.c  json_export.c  json_import.c  main.c  os.c  password_generator.c  paths.c  search.c  terminal.c  validations.c
